--- a/core-web/resource/applicationContext/conf/applicationContext-appSettings.properties
+++ b/core-web/resource/applicationContext/conf/applicationContext-appSettings.properties
@@ -24,15 +24,15 @@ base.page.jqXhr.async=Y
 #	upload file dir
 # =====================================================
 # 	cd /var
-#	mdir qifu qifu/upload
-#	chown -Rf www:www qifu
-base.uploadDir=/var/qifu/upload
+#	mdir qifu2 qifu2/upload
+#	chown -Rf www:www qifu2
+base.uploadDir=/var/qifu2/upload
 
 
 # =====================================================
 #	for jasper report  dir
 # =====================================================
-base.deployJasperReportDir=/var/qifu/jasperreport
+base.deployJasperReportDir=/var/qifu2/jasperreport
 
 
 # =====================================================
