--- a/core-base/resource/log4j.properties
+++ b/core-base/resource/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=INFO, file, stdout
  
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.File=/tmp/qifu-core.log
+log4j.appender.file.File=/tmp/qifu2-core.log
 log4j.appender.file.MaxFileSize=64MB
 log4j.appender.file.MaxBackupIndex=5
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
