--- a/core-web/WebContent/WEB-INF/web.xml
+++ b/core-web/WebContent/WEB-INF/web.xml
@@ -153,7 +153,7 @@
     	<init-param>
       		<description>The characters that will create the kaptcha. </description>
       		<param-name>kaptcha.textproducer.char.string</param-name>
-      		<param-value>ABCDEFGHIJKLMNOPQRSTUVWXYZ</param-value><!-- ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 -->
+      		<param-value>?*ABCDEFGHIJKLM%NOPQRSTUVWXYZ@123456789#+</param-value><!-- ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 -->
     	</init-param>
     	<init-param>
       		<description>The number of characters to display. </description>
