--- a/core-base/resource/shiro.ini
+++ b/core-base/resource/shiro.ini
@@ -4,7 +4,7 @@
 #####################################################
 
 [main]
-sessionManager = org.apache.shiro.session.mgt.DefaultSessionManager
+sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 securityManager.sessionManager = $sessionManager
 sessionDAO = org.apache.shiro.session.mgt.eis.MemorySessionDAO
 securityManager.sessionManager.sessionDAO = $sessionDAO
